Added Java 8 config